Update Makefile to avoid broken call to packageinstall

--- a/ExamplePackage/Makefile
+++ b/ExamplePackage/Makefile
@@ -2,27 +2,13 @@
 
 ## You can use CC CFLAGS LD LDFLAGS CXX CXXFLAGS AR RANLIB READELF STRIP after include env.mak
 include /env.mak
-
 EXEC= examplePkg
 OBJS= examplePkg.o
-
-SUBDIR=ui WIZARD_UIFILES
-
-.PHONY: all install $(SUBDIR)
-
-all: $(EXEC) $(SUBDIR)
-
-$(SUBDIR):
-	@echo "===>" $@
-	GenerateModuleFiles.php $@ $@
-	$(MAKE) -C $@ INSTALLDIR=$(INSTALLDIR)/$@ DESTDIR=$(DESTDIR) PREFIX=$(PREFIX) $(MAKECMDGOALS);
-	@echo "<===" $@
-
-packageinstall: $(SUBDIR)
-
-install: $(EXEC) $(SUBDIR)
-	mkdir -p $(DESTDIR)/usr/local/bin/
-	install $< $(DESTDIR)/usr/local/bin/
-
+all: $(EXEC)
+$(EXEC): $(OBJS)
+        $(CC) $(CFLAGS) $< -o $@ $(LDFLAGS)
+install: $(EXEC)
+        mkdir -p $(DESTDIR)/usr/bin/
+        install $< $(DESTDIR)/usr/bin/
 clean:
-	rm -rf *.o $(EXEC)
+        rm -rf *.o $(EXEC)
